# tasc_exercise/api/swagger/swagger.yaml
@@ -1,23 +1,23 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
+  version: "1.0.0"
   title: Store Backend App
 host: localhost:10010
 basePath: /api/v1
 schemes:
-  # tip: remove http to make production-grade
   - http
   - https
 consumes: [application/json]
 produces: [application/json]
 
+# Swagger Tags
 tags:
   - name: Health
     description: Used to test health of the backend.
   - name: Checkout
     description: Used to manage checkout transactions.
   - name: Item
-    description: CRUD for getting a item.
+    description: Used to manage items in the system.
 
 paths:
   "/checkout/{transactionId}":
@@ -25,7 +25,7 @@ paths:
     get:
       tags:
         - Checkout
-      description: Returns list of items in the transactions
+      description: Returns a transactions
       operationId: getTransaction
       parameters:
         - name: transactionId
@@ -38,7 +38,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/CheckoutResponse"
         default:
           description: Error
           schema:
@@ -59,7 +59,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/SimpleResponse"
         default:
           description: Error
           schema:
@@ -80,7 +80,7 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/CheckoutResponse"
         default:
           description: Error
           schema:
@@ -98,44 +98,40 @@ paths:
       parameters:
         - in: body
           name: items
-          description: List of items which will be processed
+          description: List of items & amounts which will be processed as a transaction.
           required: true
           schema:
             type: array
             items:
-              $ref: "#/definitions/Item"
+              $ref: "#/definitions/CheckoutCreateRequest"
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/CheckoutResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+  /health:
+    x-swagger-router-controller: health
     get:
       tags:
         - Health
       description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+      operationId: healthCheck
       parameters:
-        - name: name
+        - name: status
           in: query
-          description: The name of the person to whom to say hello
+          description: The status of the system.
           required: false
           type: string
       responses:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
             $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
         default:
           description: Error
           schema:
@@ -143,6 +139,7 @@ paths:
 
   /swagger:
     x-swagger-pipe: swagger_raw
+
 # complex objects have schema definitions
 definitions:
   HelloWorldResponse:
@@ -153,17 +150,43 @@ definitions:
         type: string
   CheckoutResponse:
     properties:
-      plans:
-        type: array
-        items:
-          $ref: "#/definitions/Item"  
+      transaction:
+        $ref: "#/definitions/SaleTransaction"  
   ErrorResponse:
     required:
       - message
     properties:
       message:
         type: string
-# Entities
+  CheckoutCreateRequest:
+    properties:
+      quantity:
+        type: integer
+        format: int64
+      ItemId:
+        type: integer
+        format: int64
+  SimpleResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+
+# entity & Response Objects
+  SaleTransaction:
+    properties:
+      id:
+        type: integer
+        format: int64
+      items:
+        type: array
+        items:
+          $ref: "#/definitions/Item"
+      saleTotal:
+        type: number
+        format: double 
+
   Item:
     properties:
       id:
